Initial implementation taken from maven-docker